--- a/src/pug/partials/_head.pug
+++ b/src/pug/partials/_head.pug
@@ -4,4 +4,8 @@ meta(http-equiv="X-UA-Compatible" content="IE=edge")
 meta(name="viewport" content="width=device-width, initial-scale=1")
 meta(name="description" content="#{description}")
 meta(name="author" content="")
-link(rel="icon" href="images/favicon.ico")
+link(rel="icon" href="/assets/favicon.ico?002")
+
+if extraCSS && extraCSS.length > 0
+  each css in extraCSS
+    link(rel="stylesheet", href=css)
