--- a/src/sass/modules/_common.scss
+++ b/src/sass/modules/_common.scss
@@ -15,5 +15,5 @@ html {
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   text-rendering: optimizeLegibility;
-  font-size: $baseFontSize;
+  // font-size: $baseFontSize;
 }
