change blog template, use webpack import jquery

--- a/src/pug/layouts/_blog.pug
+++ b/src/pug/layouts/_blog.pug
@@ -4,10 +4,9 @@ html(lang="zh-TW")
   head
     include ../partials/_head.pug
   body
-    .container
-      include ../partials/_blog_header.pug
+    include ../partials/blog/_header.pug
 
     main.container(role="main")
       block content
 
-    include ../partials/_blog_footer.pug
+    include ../partials/blog/_footer.pug
