Fix the previous bug, use import method to import external js files
Add readme content

--- a/src/pug/blog.pug
+++ b/src/pug/blog.pug
@@ -1,4 +1,4 @@
-extends ./layouts/_blog_layout.pug
+extends ./layouts/_blog.pug
 block variables
 	- var title = '部落格'
 	- var extraCSS = ['/css/blog.css']
