--- a/src/pug/layouts/_default.pug
+++ b/src/pug/layouts/_default.pug
@@ -9,3 +9,9 @@ html(lang="zh-TW")
     block content
 
     include ../partials/_footer.pug
+
+    //- import external JS
+    if extraJS
+      if extraJS.length > 0
+        each js in extraJS
+          script(src=js)
