Add firebase DBHelper

--- a/src/pug/partials/_navbar.pug
+++ b/src/pug/partials/_navbar.pug
@@ -14,5 +14,5 @@ header
         li.nav-item
           a.nav-link.disabled(href='#', tabindex='-1', aria-disabled='true') Disabled
       form.form-inline.mt-2.mt-md-0
-        input.form-control.mr-sm-2(type='text', placeholder='Search', aria-label='Search')
+        input#phoneNum.form-control.mr-sm-2(type='text', placeholder='Search', aria-label='Search')
         button.btn.btn-outline-success.my-2.my-sm-0(type='submit') Search
