--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,6 +1,7 @@
 @import 'modules/variables';
 @import 'modules/mixins';
 @import 'modules/common';
+@import 'pages/index';
 
 .bd-placeholder-img {
   font-size: 1.125rem;
