Fix img width, minifiy production html file

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -54,7 +54,7 @@ block content
 		// Three columns of text below the carousel
 		.row
 			.col-lg-4
-				img.rounded-circle(idth='140', height='140', src=imgPrefixUrl+'images/soarlin-avatar.jpg', alt="")
+				img.rounded-circle(width='140', height='140', src=imgPrefixUrl+'images/soarlin-avatar.jpg', alt="")
 				h2 Heading
 				p
 					| Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies
