Update webpack 4 to 5 update Bootstrap 4.5 to 5.2
TODO: Replace bootstrap example carousel page for index and blog path

--- a/src/pug/partials/_navbar.pug
+++ b/src/pug/partials/_navbar.pug
@@ -10,7 +10,7 @@ header
             | Home
             span.sr-only (current)
         li.nav-item
-          a.nav-link(href='#') Link
+          a.nav-link(href='/blog.html') Blog
         li.nav-item
           a.nav-link.disabled(href='#', tabindex='-1', aria-disabled='true') Disabled
       form.form-inline.mt-2.mt-md-0
