--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -3,6 +3,8 @@
 @import 'modules/common';
 @import 'pages/index';
 
+@import "~bootstrap/scss/bootstrap";
+
 .bd-placeholder-img {
   font-size: 1.125rem;
   text-anchor: middle;
