--- a/src/pug/partials/blog/_header.pug
+++ b/src/pug/partials/blog/_header.pug
@@ -2,7 +2,7 @@
   header.blog-header.py-3
     .row.flex-nowrap.justify-content-between.align-items-center
       .col-4.pt-1
-        a.text-muted(href='#') Subscribe
+        a.text-muted(href='/index.html') Home
       .col-4.text-center
         a.blog-header-logo.text-dark(href='#') Large
       .col-4.d-flex.justify-content-end.align-items-center
