--- a/src/pug/partials/_footer.pug
+++ b/src/pug/partials/_footer.pug
@@ -1,8 +1,8 @@
 footer.container
-  p.float-right
+  p.float-end
     a(href='#') Back to top
   p
-    | © 2017-2020 Company, Inc. ·
+    | &copy; 2017&ndash;2022 Company, Inc. &middot;
     a(href='#') Privacy
-    |  ·
+    |  &middot;
     a(href='#') Terms
