--- a/src/sass/pages/index.scss
+++ b/src/sass/pages/index.scss
@@ -3,4 +3,14 @@
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
+
+  &.bg-0 {
+    background-image: url($imgPrefix+'images/background-0.jpg');
+  }
+  &.bg-1 {
+    background-image: url($imgPrefix+'images/background-1.jpg');
+  }
+  &.bg-2 {
+    background-image: url($imgPrefix+'images/background-2.jpg');
+  }
 }
