Add gh-pages and deploy script. modify readme. Fix meta description not work

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -1,6 +1,8 @@
 extends ./layouts/_default.pug
 block variables
 	- var title = '網站首頁'
+	- var description = '網站的描述內容'
+	- var author = 'Soar Lin'
 	- var prefix = FILE_PREFIX
 	- var extraCSS = [FILE_PREFIX+'css/carousel.css']
 	- var imgPrefixUrl = IMG_PREFIX_URL
