--- a/src/pug/partials/_head.pug
+++ b/src/pug/partials/_head.pug
@@ -2,8 +2,8 @@ title #{title}
 meta(charset="UTF-8")
 meta(http-equiv="X-UA-Compatible" content="IE=edge")
 meta(name="viewport" content="width=device-width, initial-scale=1")
-meta(name="description" content="#{description}")
-meta(name="author" content="")
+meta(name="description" content=description)
+meta(name="author" content=author)
 - var hash = ('0000' + Math.round(Math.random() * (1000))).slice(-4)
 link(rel="icon" href="/assets/favicon.ico?"+hash)
 
